# structured_logging

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_ROADMAP.md  PLAN.md  PROGRAMMING_GUIDELINES.md  README.md  VERSION_STRATEGY.md  async_benchmarks.py  async_research.md  benchmarks.py  debug_numpy.py  debug_scipy.py  pyproject.toml  requirements.txt  simple_benchmark.py  version_0_5_0_plan.md
docs/: PERFORMANCE.md  cloud-logging.md
examples/: advanced_analytics_example.py  advanced_network_examples.py  async_logging_example.py  celery_example.py  cloud_logging_example.py  cloudwatch_example.py  lazy_serialization_examples.py  monitoring_dashboard_example.py  network_logging_examples.py  opentelemetry_example.py  schema_validation_examples.py  scientific_data_examples.py  serialization_examples.py  sqlalchemy_example.py  type_detection_examples.py
scripts/: benchmark_comparison.py  run_performance_tests.py
src/structured_logging/: __init__.py  async_config.py  async_context.py  async_logger.py  config.py  context.py  filtering.py  formatter.py  handlers.py  integrations.py  logger.py  network_handlers.py  performance.py  serializers.py
src/structured_logging/analytics/: __init__.py  anomaly_detector.py  metrics_collector.py  pattern_detector.py
src/structured_logging/cloud/: __init__.py  aws.py  azure.py  base.py  gcp.py  utils.py
src/structured_logging/filtering/: __init__.py  base.py  config.py  context_filter.py  custom_filter.py  engine.py  level_filter.py  sampling_filter.py
src/structured_logging/formatter/: __init__.py  csv_formatter.py  json_formatter.py  text_formatter.py
src/structured_logging/handlers/: __init__.py  config.py  rotating_handler.py  timed_handler.py  utils.py
src/structured_logging/integrations/: __init__.py  aiohttp.py  celery.py  config.py  django.py  fastapi.py  flask.py  opentelemetry.py  sqlalchemy.py  utils.py
src/structured_logging/monitoring/: __init__.py  alerts.py  dashboard.py  metrics.py  visualizations.py
src/structured_logging/network/: __init__.py  base.py  config.py  http.py  socket.py  syslog.py
src/structured_logging/serializers/: __init__.py  base.py  config.py  json_encoder.py  lazy.py  numpy_serializer.py  pandas_serializer.py  registry.py  scipy_serializer.py  smart_converter.py  type_detection.py  validation.py
src/structured_logging/streaming/: __init__.py  operations.py  processor.py  sinks.py  sources.py
tests/: test_aiohttp.py  test_async_logger.py  test_celery.py  test_cloud_aws.py  test_cloud_azure.py  test_cloud_gcp.py  test_config.py  test_context.py  test_django.py  test_filtering.py  test_formatter.py  test_handlers.py  test_integrations.py  test_logger.py  test_metrics_collector.py  test_monitoring_dashboard.py  test_network_handlers.py  test_new_formatters.py  test_opentelemetry.py  test_performance.py  test_scientific_integration.py  test_serializers.py  test_sqlalchemy.py  test_streaming_processor.py
tests/performance/: __init__.py  conftest.py  test_benchmarks.py
