[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-logging"
version = "0.8.0"
description = "A flexible Python library for structured JSON logging with context management"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Alex Kummerer"},
]
keywords = ["logging", "structured", "json", "context", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=3.0,<5.0", 
    "black>=22.0,<25.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bump2version>=1.0.0,<2.0.0",
]
scientific = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]
aws = [
    "boto3>=1.20.0",
]
gcp = [
    "google-cloud-logging>=3.0.0",
]
azure = [
    "requests>=2.25.0",
    "azure-monitor-ingestion>=1.0.0",
    "azure-identity>=1.12.0",
]
otel = [
    "opentelemetry-api>=1.15.0",
    "opentelemetry-sdk>=1.15.0",
    "opentelemetry-instrumentation-logging>=0.36b0",
]
# Framework integrations
django = ["django>=3.2"]
aiohttp = ["aiohttp>=3.8.0"]
celery = ["celery>=5.2.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
all = [
    "numpy>=1.21.0",
    "pandas>=1.3.0", 
    "scipy>=1.7.0",
    "boto3>=1.20.0",
    "google-cloud-logging>=3.0.0",
    "requests>=2.25.0",
    "azure-monitor-ingestion>=1.0.0",
    "azure-identity>=1.12.0",
    "opentelemetry-api>=1.15.0",
    "opentelemetry-sdk>=1.15.0",
    "opentelemetry-instrumentation-logging>=0.36b0",
    "django>=3.2",
    "aiohttp>=3.8.0",
    "celery>=5.2.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/alexkummerer/structured-logging"
Repository = "https://github.com/alexkummerer/structured-logging.git"
Issues = "https://github.com/alexkummerer/structured-logging/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["structured_logging"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "performance: marks tests as performance benchmarks (deselect with '-m \"not performance\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
# Exclude performance tests by default
addopts = "-m 'not performance'"